--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - 3306:3306 # MySQL
     volumes:
       # Serve app folder to the server
+      - ./app/node.js:/app
       - ./app/php:/var/www/html
       - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
