--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -147,7 +147,7 @@ volumes:
     #     - 3306:3306
     #   volumes:
     #     # - ./data/mysql:/var/lib/mysql
-    #     - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases must match!
+    #     - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases should be consistent!
     #   environment:
     #     MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
     #     MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
@@ -160,7 +160,7 @@ volumes:
     #       - "5432:5432"
     #     volumes:
     #       # - ./data/postgres:/var/lib/postgresql/data
-    #       - postgres-data:/var/lib/postgresql/data # Linux is case sensitive, so table name cases must match!
+    #       - postgres-data:/var/lib/postgresql/data # Linux is case sensitive, so table name cases should be consistent!
     #     environment:
     #       POSTGRES_USER: "${POSTGRES_USER}"
     #       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
