--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "Build & Up": "npm run Build && npm run Up",
     "Up": "docker compose up",
     "Build": "docker compose build",
+    "Force Build & Up": "docker compose build --no-cache && docker compose up --force-recreate",
     "Docker Compose Up": "docker compose up --force-recreate",
     "Docker Compose Build": "docker compose build --no-cache"
   }
