--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,38 +26,38 @@ services:
   #   depends_on:
   #     - MySQL
 
-  mysql:
-    image: mysql:latest
-    container_name: MySQL
-    restart: always
-    ports:
-      - 3306:3306
-    volumes:
-      # - ./data/mysql:/var/lib/mysql
-      - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases should be consistent!
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
-      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
-
-  # ubuntu:
-  #   tty: true
-  #   container_name: Ubuntu
+  # mysql:
+  #   image: mysql:latest
+  #   container_name: MySQL
   #   restart: always
-  #   build:
-  #     context: ./docker/ubuntu
-  #     dockerfile: Dockerfile
   #   ports:
-  #     - 81:81 # phpMyAdmin
-  #     - 80:80 # PHP
-  #     - 8080:8080 # Java
-  #     - 3000:3000 # Node.js
-  #     - 3306:3306 # MySQL
+  #     - 3306:3306
   #   volumes:
-  #     # Serve app folder to the server
-  #     - ./app/node.js:/app
-  #     - ./app/php:/var/www/html
-  #     - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-  #     - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+  #     # - ./data/mysql:/var/lib/mysql
+  #     - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases should be consistent!
+  #   environment:
+  #     MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
+  #     MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+
+  ubuntu:
+    tty: true
+    container_name: Ubuntu
+    restart: always
+    build:
+      context: ./docker/ubuntu
+      dockerfile: Dockerfile
+    ports:
+      - 81:81 # phpMyAdmin
+      - 80:80 # PHP
+      - 8080:8080 # Java
+      - 3000:3000 # Node.js
+      - 3306:3306 # MySQL
+    volumes:
+      # Serve app folder to the server
+      - ./app/node.js:/app
+      - ./app/php:/var/www/html
+      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
   #   entrypoint: [ "/bin/sh", "-c" ]
   #   # Escape environmental variables (e.g. NVM_DIR) in the command using an extra $
   #   command:
