--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,40 +24,66 @@ services:
   #   volumes:
   #     - jenkins-data:/var/jenkins_home
   #   depends_on:
-  #     - MySQL
+  #     - mysql
 
-  # mysql:
-  #   image: mysql:latest
-  #   container_name: MySQL
-  #   restart: always
-  #   ports:
-  #     - 3306:3306
-  #   volumes:
-  #     # - ./data/mysql:/var/lib/mysql
-  #     - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases should be consistent!
-  #   environment:
-  #     MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
-  #     MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+  phpmyadmin:
+    image: phpmyadmin
+    container_name: phpMyAdmin
+    restart: always
+    ports:
+      - 8081:80
+    environment:
+      PMA_HOST: "${PMA_HOST}"
+      PMA_USER: "${PMA_USER}"
+      PMA_PASSWORD: "${PMA_PASSWORD}"
+    depends_on:
+      - mysql
 
-  ubuntu:
-    tty: true
-    container_name: Ubuntu
+  php:
+    container_name: PHP-Apache
     restart: always
     build:
-      context: ./docker/ubuntu
+      context: ./docker/apache
       dockerfile: Dockerfile
     ports:
-      - 81:81 # phpMyAdmin
-      - 80:80 # PHP
-      - 8080:8080 # Java
-      - 3000:3000 # Node.js
-      - 3306:3306 # MySQL
+      - 80:80
     volumes:
       # Serve app folder to the server
-      - ./app/node.js:/app
-      - ./app/php:/var/www/html
-      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+      - D:/xampp/htdocs:/var/www/html/
+      - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
+
+  mysql:
+    image: mysql:latest
+    container_name: MySQL
+    restart: always
+    ports:
+      - 3306:3306
+    volumes:
+      # - ./data/mysql:/var/lib/mysql
+      - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases should be consistent!
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
+      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+
+  # ubuntu:
+  #   tty: true
+  #   container_name: Ubuntu
+  #   restart: always
+  #   build:
+  #     context: ./docker/ubuntu
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 81:81 # phpMyAdmin
+  #     - 80:80 # PHP
+  #     - 8080:8080 # Java
+  #     - 3000:3000 # Node.js
+  #     - 3306:3306 # MySQL
+  #   volumes:
+  #     # Serve app folder to the server
+  #     - ./app/node.js:/app
+  #     - ./app/php:/var/www/html
+  #     - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+  #     - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
   #   entrypoint: [ "/bin/sh", "-c" ]
   #   # Escape environmental variables (e.g. NVM_DIR) in the command using an extra $
   #   command:
@@ -121,47 +147,10 @@ volumes:
     #   ports:
     #     - 8080:8080
     #   depends_on:
-    #     - MySQL
-    #     - PostgreSQL
+    #     - mysql
+    #     - postgresql
 
-    # phpmyadmin:
-    #   image: phpmyadmin
-    #   container_name: phpMyAdmin
-    #   restart: always
-    #   ports:
-    #     - 8081:80
-    #   environment:
-    #     PMA_HOST: "${PMA_HOST}"
-    #     PMA_USER: "${PMA_USER}"
-    #     PMA_PASSWORD: "${PMA_PASSWORD}"
-    #   depends_on:
-    #     - MySQL
 
-    # php:
-    #   container_name: PHP-Apache
-    #   restart: always
-    #   build:
-    #     context: ./docker/apache
-    #     dockerfile: Dockerfile
-    #   ports:
-    #     - 80:80
-    #   volumes:
-    #     # Serve app folder to the server
-    #     - ./app/php:/var/www/html/
-    #     - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
-
-    # mysql:
-    #   image: mysql:latest
-    #   container_name: MySQL
-    #   restart: always
-    #   ports:
-    #     - 3306:3306
-    #   volumes:
-    #     # - ./data/mysql:/var/lib/mysql
-    #     - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases should be consistent!
-    #   environment:
-    #     MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
-    #     MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
 
     #   postgres:
     #     image: postgres:alpine
