--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - 80:80
     volumes:
       # Serve app folder to the server
+      # - ./app/php:/var/www/html/
       - D:/xampp/htdocs:/var/www/html/
       - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
 
