--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ MYSQL_ROOT_PASSWORD="123"
 
 # PostgreSQL
 POSTGRES_USER=root
-POSTGRES_PASSWORD="123x"
+POSTGRES_PASSWORD="123"
 
 # phpMyAdmin
 PMA_HOST=MySQL
