--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
+COMPOSE_FILE=docker-compose.dev.yml
+
 # MySQL
-MYSQL_ALLOW_EMPTY_PASSWORD="no"
-MYSQL_ROOT_PASSWORD="123"
+MYSQL_ALLOW_EMPTY_PASSWORD=no
+MYSQL_ROOT_PASSWORD=123
 
 # PostgreSQL
 POSTGRES_USER=root
-POSTGRES_PASSWORD="123"
+POSTGRES_PASSWORD=123
 
 # phpMyAdmin
 PMA_HOST=MySQL
 PMA_USER=root
-PMA_PASSWORD="123"
+PMA_PASSWORD=123
