--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "scripts": {
+    "Databases Up": "docker compose --file docker-compose.db.yml up",
+    "Databases Build": "docker compose --file docker-compose.db.yml build",
     "Build & Up": "npm run Build && npm run Up",
     "Up": "docker compose up",
     "Build": "docker compose build",
     "Force Build & Up": "docker compose build --no-cache && docker compose up --force-recreate",
     "Docker Compose Up": "docker compose up --force-recreate",
     "Docker Compose Build": "docker compose build --no-cache"
-  }
+  },
+  "comments": [
+    "Set the default compose file with 'COMPOSE_FILE' in .env"
+  ]
 }
