--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,18 @@ app/java/*
 app/php/*
 app/python/*
 
+terraform/.terraform
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# password, private keys, and other secrets. These should not be part of version 
+# control as they are data points which are potentially sensitive and subject 
+# to change depending on the environment.
+*.tfvars
+*.tfvars.json
+
 # This line should be the last line in .gitignore file
 # This line preserves the folder structure (allows an empty folder to be uploaded)
 !*README.md
