--- a/docker-compose.apps.yml
+++ b/docker-compose.apps.yml
@@ -14,5 +14,5 @@ services:
       - 3000:3000
       - 5000:5000
     volumes:
-      - ./app/node.js:/app
+      # - ./app/node.js:/app
     tty: true # Keep the container "always running". Prevent <Container> exited with code 0 error
