--- a/docker-compose.apps.yml
+++ b/docker-compose.apps.yml
@@ -13,6 +13,6 @@ services:
     ports:
       - 3000:3000
       - 5000:5000
-    volumes:
+    # volumes:
       # - ./app/node.js:/app
     tty: true # Keep the container "always running". Prevent <Container> exited with code 0 error
