--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,7 +14,7 @@ services:
       - 80:80
     volumes:
       # Serve app folder to the server
-      # - ./app/php:/var/www/html/
+      - ./app/php:/var/www/html/
       # - D:/xampp/htdocs:/var/www/html/
       - ./docker/php/overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
   # node.js:
