--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,10 +8,10 @@ services:
     container_name: PHP-Apache
     restart: always
     build:
-      context: ./docker/apache
+      context: ./docker/apache2
       dockerfile: Dockerfile
     ports:
-      - 80:80
+      - 81:80
     volumes:
       # Serve app folder to the server
       - ./app/php:/var/www/html/
