--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,13 +1,14 @@
-upstream apache2 {
-    server host.docker.internal:81;
-}
-
 server {
     # Nginx port
-    listen       80;
+    listen 80;
+    listen [::]:80;
     server_name localhost;
 
     location / {
         proxy_pass http://apache2;
     }
+}
+
+upstream apache2 {
+    server host.docker.internal:81;
 }
