--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -4,11 +4,12 @@ server {
     listen [::]:80;
     server_name localhost;
 
-    location / {
+    location /php {
         proxy_pass http://apache2;
     }
 }
 
 upstream apache2 {
+    rewrite /*/g php;
     server judigot.com:81;
 }
