--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,15 +1,22 @@
+upstream apache2 {
+    server localhost:81;
+}
+
+upstream node {
+    server localhost:3000;
+}
+
 server {
     # Nginx port
     listen 80;
     listen [::]:80;
     server_name localhost;
 
-    location /php {
+    location / {
         proxy_pass http://apache2;
     }
-}
 
-upstream apache2 {
-    rewrite /*/g php;
-    server judigot.com:81;
+    location /node {
+        proxy_pass http://node;
+    }
 }
