--- a/docker-compose.nginx.yml
+++ b/docker-compose.nginx.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 
-name: Apps
+name: Server
 
 services:
   nginx:
@@ -12,5 +12,8 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./app/html:/usr/share/nginx/html
+      - ./docker/nginx/conf.d/reverse-proxy.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/conf.d/site1.conf:/etc/nginx/conf.d/site1.conf
+      - ./docker/nginx/conf.d/site2.conf:/etc/nginx/conf.d/site2.conf
     tty: true # Keep the container "always running". Prevent <Container> exited with code 0 error
