--- a/docker/nginx/conf.d/reverse-proxy.conf
+++ b/docker/nginx/conf.d/reverse-proxy.conf
@@ -1,9 +1,9 @@
 upstream apache2 {
-    server localhost:81;
+    server host.docker.internal:81;
 }
 
 upstream node {
-    server localhost:3000;
+    server host.docker.internal:3000;
 }
 
 server {
