--- a/docker-compose.nginx.yml
+++ b/docker-compose.nginx.yml
@@ -14,6 +14,6 @@ services:
     volumes:
       - ./app/html:/usr/share/nginx/html
       - ./docker/nginx/conf.d/reverse-proxy.conf:/etc/nginx/conf.d/default.conf
-      - ./docker/nginx/conf.d/site1.conf:/etc/nginx/conf.d/site1.conf
-      - ./docker/nginx/conf.d/site2.conf:/etc/nginx/conf.d/site2.conf
+      - ./docker/nginx/conf.d/app1.conf:/etc/nginx/conf.d/app1.conf
+      - ./docker/nginx/conf.d/app2.conf:/etc/nginx/conf.d/app2.conf
     tty: true # Keep the container "always running". Prevent <Container> exited with code 0 error
