--- a/docker-compose.nginx.yml
+++ b/docker-compose.nginx.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./app/html:/usr/share/nginx/html
+      - ./app/html:/usr/share/nginx
       - ./docker/nginx/conf.d/reverse-proxy.conf:/etc/nginx/conf.d/default.conf
       - ./docker/nginx/conf.d/app1.conf:/etc/nginx/conf.d/app1.conf
       - ./docker/nginx/conf.d/app2.conf:/etc/nginx/conf.d/app2.conf
