--- a/docker/nginx/conf.d/app2.conf
+++ b/docker/nginx/conf.d/app2.conf
@@ -1,21 +1,13 @@
 server {
     listen 80;
     listen [::]:80;
-    # server_name localhost;
-
     server_name app2.judigot.com;
 
-    #access_log  /var/log/nginx/host.access.log  main;
+    root /usr/share/nginx/app2;
 
-    root /usr/share/nginx/html/app2;
     index index.html index.htm;
 
     location / {
-        # root /usr/share/nginx/html/app2;
-        # index index.html index.htm;
-
         try_files $uri $uri/ =404;
     }
-
 }
-
