--- a/docker-compose.nginx.yml
+++ b/docker-compose.nginx.yml
@@ -13,7 +13,7 @@ services:
       - 80:80
     volumes:
       - ./app/html:/usr/share/nginx
-      - ./docker/nginx/conf.d/reverse-proxy.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/conf.d/reverse-proxy.conf:/etc/nginx/conf.d/reverse-proxy.conf
       - ./docker/nginx/conf.d/app1.conf:/etc/nginx/conf.d/app1.conf
       - ./docker/nginx/conf.d/app2.conf:/etc/nginx/conf.d/app2.conf
     tty: true # Keep the container "always running". Prevent <Container> exited with code 0 error
