--- a/docker/nginx/conf.d/reverse-proxy.conf
+++ b/docker/nginx/conf.d/reverse-proxy.conf
@@ -1,8 +1,10 @@
 upstream apache2 {
+    # server judigot.com:81;
     server host.docker.internal:81;
 }
 
 upstream node {
+    # server judigot.com:3000;
     server host.docker.internal:3000;
 }
 
@@ -10,7 +12,8 @@ server {
     # Nginx port
     listen 80;
     listen [::]:80;
-    server_name localhost;
+    server_name judigot.com;
+    # server_name localhost;
 
     location / {
         proxy_pass http://apache2;
