--- a/docker-compose.apps.yml
+++ b/docker-compose.apps.yml
@@ -8,7 +8,7 @@ services:
     container_name: Node.js
     restart: always
     build:
-      context: ./docker/node.js
+      context: ./config/node.js
       dockerfile: Dockerfile
     ports:
       - 3000:3000
