--- a/docker-compose.ubuntu.yml
+++ b/docker-compose.ubuntu.yml
@@ -9,7 +9,7 @@ services:
     container_name: Ubuntu
     restart: always
     build:
-      context: ./docker/ubuntu
+      context: ./config/ubuntu
       dockerfile: Dockerfile
     ports:
       - 81:81 # phpMyAdmin
@@ -21,8 +21,8 @@ services:
       # Serve app folder to the server
       - ./app/node.js:/app
       - ./app/php:/var/www/html
-      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - ./docker/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+      - ./config/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./config/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
     entrypoint: [ "/bin/sh", "-c" ]
     # Escape environmental variables (e.g. NVM_DIR) in the command using an extra $
     command:
