--- a/config/nginx/conf.d/reverse-proxy.conf
+++ b/config/nginx/conf.d/reverse-proxy.conf
@@ -1,11 +1,11 @@
 upstream apache2 {
-    # server judigot.com:81;
-    server host.docker.internal:81;
+    server judigot.com:81;
+    # server host.docker.internal:81;
 }
 
 upstream node {
-    # server judigot.com:3000;
-    server host.docker.internal:3000;
+    server judigot.com:3000;
+    # server host.docker.internal:3000;
 }
 
 server {
