--- a/config/nginx/Dockerfile
+++ b/config/nginx/Dockerfile
@@ -3,6 +3,6 @@ FROM nginx
 EXPOSE 80
 
 # Remove boilerplate
-RUN rm /usr/share/nginx/html/*
+# RUN rm /usr/share/nginx/html/*
 
 CMD nginx -g "daemon off;"
