--- a/docker-compose.ubuntu.yml
+++ b/docker-compose.ubuntu.yml
@@ -12,21 +12,21 @@ services:
       context: ./config/ubuntu
       dockerfile: Dockerfile
     ports:
-      - 81:81 # phpMyAdmin
+      # - 81:81 # phpMyAdmin
       - 80:80 # PHP
-      - 8080:8080 # Java
-      - 3000:3000 # Node.js
-      - 3306:3306 # MySQL
-    volumes:
+      # - 8080:8080 # Java
+      # - 3000:3000 # Node.js
+      # - 3306:3306 # MySQL
+    # volumes:
       # Serve app folder to the server
-      - ./app/node.js:/app
-      - ./app/php:/var/www/html
-      - ./config/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - ./config/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
-    entrypoint: [ "/bin/sh", "-c" ]
+      # - ./app/node.js:/app
+      # - ./app/php:/var/www/html
+      # - ./config/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      # - ./config/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+    # entrypoint: [ "/bin/sh", "-c" ]
     # Escape environmental variables (e.g. NVM_DIR) in the command using an extra $
-    command:
-      - |
-        echo "Command 1"
-        echo "Command 2"
-        echo "Command 3"
+    # command:
+    #   - |
+    #     echo "Command 1"
+    #     echo "Command 2"
+    #     echo "Command 3"
