--- a/docker-compose.ubuntu.yml
+++ b/docker-compose.ubuntu.yml
@@ -26,7 +26,7 @@ services:
       - ./config/nginx/conf.d/reverse-proxy.conf:/etc/nginx/conf.d/reverse-proxy.conf
       - ./config/nginx/conf.d/app1.conf:/etc/nginx/conf.d/app1.conf
       - ./config/nginx/conf.d/app2.conf:/etc/nginx/conf.d/app2.conf
-      - ./config/nginx/conf.d/ssl.conf:/etc/nginx/sites-available/default
+      # - ./config/nginx/conf.d/ssl.conf:/etc/nginx/sites-available/default
       # - ./config/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       # - ./config/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
     # entrypoint: [ "/bin/sh", "-c" ]
