--- a/config/nginx/conf.d/app1.conf
+++ b/config/nginx/conf.d/app1.conf
@@ -3,7 +3,8 @@ server {
     listen [::]:80;
     server_name app1.judigot.com;
 
-    root /usr/share/nginx/app1;
+    root /var/www/app1;
+    # root /usr/share/nginx/app1;
 
     index index.html index.htm;
 
