--- a/config/nginx/conf.d/app2.conf
+++ b/config/nginx/conf.d/app2.conf
@@ -3,7 +3,8 @@ server {
     listen [::]:80;
     server_name app2.judigot.com;
 
-    root /usr/share/nginx/app2;
+    root /var/www/app2;
+    # root /usr/share/nginx/app2;
 
     index index.html index.htm;
 
