--- a/config/nginx/conf.d/ssl (production).conf
+++ b/config/nginx/conf.d/ssl (production).conf
@@ -21,9 +21,6 @@ server {
         proxy_pass http://node;
     }
 
-    listen 80;
-    listen [::]:80;
-
     #==========SSL(HTTPS)==========#
     listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
@@ -34,4 +31,26 @@ server {
     #==========SSL(HTTPS)==========#
 
 
+}
+
+server {
+    if ($host = judigot.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    listen 80 ;
+    listen [::]:80 ;
+    server_name judigot.com;
+    return 404; # managed by Certbot
+}
+
+server {
+    if ($host = www.judigot.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    listen 80 ;
+    listen [::]:80 ;
+    server_name www.judigot.com;
+    return 404; # managed by Certbot
 }
