--- a/config/nginx/conf.d/ssl (production).conf
+++ b/config/nginx/conf.d/ssl (production).conf
@@ -1,17 +1,28 @@
-upstream apache2 {
-    server judigot.com:81;
-    # server host.docker.internal:81;
-}
-
-upstream node {
-    server judigot.com:3000;
-    # server host.docker.internal:3000;
-}
-
+# HTTP (Port 80)
 server {
-    # Nginx port
+    # if ($host = judigot.com) {
+    #     return 301 https://$host$request_uri;
+    # } # managed by Certbot
+
+    listen 80;
+    listen [::]:80;
     server_name judigot.com www.judigot.com;
-    # server_name localhost;
+    return 301 https://$host$request_uri;
+    return 404; # managed by Certbot
+}
+
+# HTTPS - SSL (Port 443)
+server {
+    listen 443 ssl; # managed by Certbot
+    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    server_name judigot.com www.judigot.com;
+
+    #==========SSL CONFIGURATION==========#
+    ssl_certificate /etc/letsencrypt/live/judigot.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/judigot.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    #==========SSL CONFIGURATION==========#
 
     location / {
         proxy_pass http://apache2;
@@ -20,37 +31,14 @@ server {
     location /node {
         proxy_pass http://node;
     }
-
-    #==========SSL(HTTPS)==========#
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/judigot.com/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/judigot.com/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-    #==========SSL(HTTPS)==========#
-
-
 }
 
-server {
-    if ($host = judigot.com) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-    listen 80 ;
-    listen [::]:80 ;
-    server_name judigot.com;
-    return 404; # managed by Certbot
+upstream apache2 {
+    server judigot.com:81;
+    # server host.docker.internal:81;
 }
 
-server {
-    if ($host = www.judigot.com) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-    listen 80 ;
-    listen [::]:80 ;
-    server_name www.judigot.com;
-    return 404; # managed by Certbot
+upstream node {
+    server judigot.com:3000;
+    # server host.docker.internal:3000;
 }
