--- a/config/nginx/conf.d/ssl (production).conf
+++ b/config/nginx/conf.d/ssl (production).conf
@@ -24,21 +24,23 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
     #==========SSL CONFIGURATION==========#
 
+    #==========REVERSE PROXY==========#
     location / {
         proxy_pass http://apache2;
     }
-
     location /node {
         proxy_pass http://node;
     }
+    #==========REVERSE PROXY==========#
 }
 
+#==========REVERSE PROXY==========#
 upstream apache2 {
     server judigot.com:81;
     # server host.docker.internal:81;
 }
-
 upstream node {
     server judigot.com:3000;
     # server host.docker.internal:3000;
 }
+#==========REVERSE PROXY==========#
