--- a/config/nginx/conf.d/app2.conf
+++ b/config/nginx/conf.d/app2.conf
@@ -1,8 +1,16 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 443 ssl; # managed by Certbot
+    listen [::]:443 ssl; # managed by Certbot
     server_name app2.judigot.com;
 
+    #==========SSL CONFIGURATION==========#
+    ssl_certificate /etc/letsencrypt/live/app2.judigot.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/app2.judigot.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    #==========SSL CONFIGURATION==========#
+
+    #==========STATIC CONTENT==========#
     root /var/www/app2;
     # root /usr/share/nginx/app2;
 
@@ -11,4 +19,22 @@ server {
     location / {
         try_files $uri $uri/ =404;
     }
+    #==========STATIC CONTENT==========#
+}
+
+# HTTP (Port 80)
+server {
+    # if ($host = app2.judigot.com) {
+    #     return 301 https://$host$request_uri;
+    # } # managed by Certbot
+
+    if ($host = app2.judigot.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    listen 80;
+    listen [::]:80;
+    server_name app2.judigot.com www.app2.judigot.com;
+    return 301 https://$host$request_uri;
+    return 404; # managed by Certbot
 }
