--- a/config/nginx/conf.d/reverse-proxy.conf
+++ b/config/nginx/conf.d/reverse-proxy.conf
@@ -1,25 +1,46 @@
+# HTTP (Port 80)
+server {
+    # if ($host = judigot.com) {
+    #     return 301 https://$host$request_uri;
+    # } # managed by Certbot
+
+    listen 80;
+    listen [::]:80;
+    server_name judigot.com www.judigot.com;
+    return 301 https://$host$request_uri;
+    return 404; # managed by Certbot
+}
+
+# HTTPS - SSL (Port 443)
+server {
+    listen 443 ssl; # managed by Certbot
+    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    server_name judigot.com www.judigot.com;
+
+    #==========SSL CONFIGURATION==========#
+    ssl_certificate /etc/letsencrypt/live/judigot.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/judigot.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    #==========SSL CONFIGURATION==========#
+
+    #==========REVERSE PROXY==========#
+    location / {
+        proxy_pass http://apache2;
+    }
+    location /node {
+        proxy_pass http://node;
+    }
+    #==========REVERSE PROXY==========#
+}
+
+#==========REVERSE PROXY==========#
 upstream apache2 {
     server judigot.com:81;
     # server host.docker.internal:81;
 }
-
 upstream node {
     server judigot.com:3000;
     # server host.docker.internal:3000;
 }
-
-server {
-    # Nginx port
-    listen 80;
-    listen [::]:80;
-    server_name judigot.com;
-    # server_name localhost;
-
-    location / {
-        proxy_pass http://apache2;
-    }
-
-    location /node {
-        proxy_pass http://node;
-    }
-}
+#==========REVERSE PROXY==========#
