Add configuration for local development

--- a/config/nginx/conf.d/reverse-proxy.conf
+++ b/config/nginx/conf.d/reverse-proxy.conf
@@ -1,3 +1,22 @@
+#====================LOCAL DEVELOPMENT====================#
+# HTTP (Port 80)
+# server {
+#     listen 80;
+#     listen [::]:80;
+
+#     server_name localhost;
+
+#     #==========REVERSE PROXY==========#
+#     location / {
+#         proxy_pass http://apache2;
+#     }
+#     location /node {
+#         proxy_pass http://node;
+#     }
+#     #==========REVERSE PROXY==========#
+# }
+#====================LOCAL DEVELOPMENT====================#
+
 # HTTP (Port 80)
 server {
     # if ($host = judigot.com) {
