--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-COMPOSE_FILE=docker-compose.nginx.yml
+COMPOSE_FILE=docker-compose.mongodb.yml
 
 # MySQL
 MYSQL_ALLOW_EMPTY_PASSWORD=no
@@ -12,3 +12,8 @@ POSTGRES_PASSWORD=123
 PMA_HOST=MySQL
 PMA_USER=root
 PMA_PASSWORD=123
+
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=example
+ME_CONFIG_MONGODB_ADMINUSERNAME=root
+ME_CONFIG_MONGODB_ADMINPASSWORD=123
