--- a/docker-compose.mongodb.yml
+++ b/docker-compose.mongodb.yml
@@ -8,6 +8,8 @@ services:
     image: mongo
     container_name: MongoDB
     restart: always
+    ports:
+      - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
