--- a/docker-compose.ubuntu.custom.yml
+++ b/docker-compose.ubuntu.custom.yml
@@ -28,10 +28,12 @@ services:
       # - ./config/nginx/conf.d/ssl.conf:/etc/nginx/sites-available/default
       # - ./config/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       # - ./config/php/overrides.ini:/etc/php/8.1/fpm/conf.d/overrides.ini
+    #=====COMMAND=====# 
+    # # Escape environmental variables (e.g. NVM_DIR) in the command using an extra $
     # entrypoint: [ "/bin/sh", "-c" ]
-    # Escape environmental variables (e.g. NVM_DIR) in the command using an extra $
     # command:
     #   - |
     #     echo "Command 1"
     #     echo "Command 2"
     #     echo "Command 3"
+    #=====COMMAND=====#
