--- a/config/apache2/Dockerfile
+++ b/config/apache2/Dockerfile
@@ -5,18 +5,31 @@ FROM php:8.1.0-apache
 
 RUN apt update && apt install -y \
     # Install Git
-    # git \
+    git \
+    zip \
+    unzip \
     \
     # Enable htaccess
     && a2enmod ssl expires headers rewrite \
     \
     # PHP Extensions
     && docker-php-ext-install bcmath \
-    && docker-php-ext-install calendar \
-    && docker-php-ext-install exif \
-    && docker-php-ext-install gettext \
-    && docker-php-ext-install mysqli \
-    && docker-php-ext-install pdo_mysql
+    calendar \
+    exif \
+    gettext \
+    mysqli \
+    pdo_mysql
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+# Set the working directory
+WORKDIR /var/www/html
+
+# Change Apache document root directory
+RUN sed -ri -e 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/*.conf
+RUN sed -ri -e 's!/var/www/!/var/www/html/public!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
+
+# Set permissions
+# RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache && \
+#     chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache
