--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 COMPOSE_FILE=docker-compose.salesmaster.yml
-# 
+
+MASTER_USERNAME=root
+MASTER_PASSWORD=123
+
 # MySQL
 MYSQL_ALLOW_EMPTY_PASSWORD=no
 MYSQL_ROOT_PASSWORD=123
@@ -7,6 +10,9 @@ MYSQL_ROOT_PASSWORD=123
 # PostgreSQL
 POSTGRES_USER=root
 POSTGRES_PASSWORD=123
+
+# MSSQL
+SA_PASSWORD=123
 
 # phpMyAdmin
 PMA_HOST=MySQL
