--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -22,8 +22,8 @@ services:
       - ./config/phpmyadmin/custom.ini:/usr/local/etc/php/conf.d/custom.ini # Linux is case sensitive, so table name cases should be consistent!
     environment:
       PMA_HOST: "${PMA_HOST}"
-      PMA_USER: "${PMA_USER}"
-      PMA_PASSWORD: "${PMA_PASSWORD}"
+      PMA_USER: "${MASTER_USERNAME}"
+      PMA_PASSWORD: "${MASTER_PASSWORD}"
     depends_on:
       - mysql
 
@@ -38,7 +38,7 @@ services:
       - mysql-data:/var/lib/mysql # Linux is case sensitive, so table name cases should be consistent!
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "${MYSQL_ALLOW_EMPTY_PASSWORD}"
-      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+      MYSQL_ROOT_PASSWORD: "${MASTER_PASSWORD}"
 
   postgres:
     image: postgres:alpine
@@ -50,9 +50,23 @@ services:
       # - ./data/postgres:/var/lib/postgresql/data
       - postgres-data:/var/lib/postgresql/data # Linux is case sensitive, so table name cases should be consistent!
     environment:
-      POSTGRES_USER: "${POSTGRES_USER}"
-      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      POSTGRES_USER: "${MASTER_USERNAME}"
+      POSTGRES_PASSWORD: "${MASTER_PASSWORD}"
+
+  mssql:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: MSSQL
+    restart: always
+    ports:
+      - 1433:1433
+    volumes:
+      - mssql-data:/var/opt/mssql
+    environment:
+      SA_PASSWORD: "${SA_PASSWORD}"
+      ACCEPT_EULA: "Y" # Accepts the license agreement
+      MSSQL_PID: "Express" # Use the Express edition (free)
 
 volumes:
   mysql-data:
   postgres-data:
+  mssql-data:
