--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ POSTGRES_USER=root
 POSTGRES_PASSWORD=123
 
 # MSSQL
-SA_PASSWORD=Pass123!
+MSSQL_SA_PASSWORD=Pass123!
 
 # phpMyAdmin
 PMA_HOST=MySQL
